# ptoolkit

./: README.md  default.nix  pyproject.toml
datasets/: 3k_prompts.csv
src/prompt_toolkit/: __init__.py  cli.py  utils.py
src/prompt_toolkit/ui/: __init__.py  cataloger.py
